--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="hint_description">Description</string>
     <string name="preset_timestamp_now">Now</string>
     <string name="preset_timestamp_today">Today</string>
-    <string name="preset_timestamp_week">This week</string>
+    <string name="preset_timestamp_week">Week</string>
     <string name="button_save">Save</string>
     <string name="error_invalid_amount">Enter an amount greater than 0</string>
     <string name="error_empty_description">Description cannot be empty</string>
